TL/src/main/tl/parser/TLParser.java
// $ANTLR 3.4 src/grammar/TL.g 2012-09-13 18:40:07

  package tl.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class TLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Add", "And", "Assert", "Assign", "Bool", "CBrace", "CBracket", "CParen", "Colon", "Comma", "Comment", "Def", "Digit", "Divide", "Do", "Else", "End", "Equals", "Excl", "For", "GT", "GTEquals", "Identifier", "If", "In", "Int", "LT", "LTEquals", "Modulus", "Multiply", "NEquals", "Null", "Number", "OBrace", "OBracket", "OParen", "Or", "Pow", "Print", "Println", "QMark", "Return", "SColon", "Size", "Space", "String", "Subtract", "To", "While"
    };

    public static final int EOF=-1;
    public static final int Add=4;
    public static final int And=5;
    public static final int Assert=6;
    public static final int Assign=7;
    public static final int Bool=8;
    public static final int CBrace=9;
    public static final int CBracket=10;
    public static final int CParen=11;
    public static final int Colon=12;
    public static final int Comma=13;
    public static final int Comment=14;
    public static final int Def=15;
    public static final int Digit=16;
    public static final int Divide=17;
    public static final int Do=18;
    public static final int Else=19;
    public static final int End=20;
    public static final int Equals=21;
    public static final int Excl=22;
    public static final int For=23;
    public static final int GT=24;
    public static final int GTEquals=25;
    public static final int Identifier=26;
    public static final int If=27;
    public static final int In=28;
    public static final int Int=29;
    public static final int LT=30;
    public static final int LTEquals=31;
    public static final int Modulus=32;
    public static final int Multiply=33;
    public static final int NEquals=34;
    public static final int Null=35;
    public static final int Number=36;
    public static final int OBrace=37;
    public static final int OBracket=38;
    public static final int OParen=39;
    public static final int Or=40;
    public static final int Pow=41;
    public static final int Print=42;
    public static final int Println=43;
    public static final int QMark=44;
    public static final int Return=45;
    public static final int SColon=46;
    public static final int Size=47;
    public static final int Space=48;
    public static final int String=49;
    public static final int Subtract=50;
    public static final int To=51;
    public static final int While=52;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public TLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public TLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return TLParser.tokenNames; }
    public String getGrammarFileName() { return "src/grammar/TL.g"; }



    // $ANTLR start "parse"
    // src/grammar/TL.g:10:1: parse : block EOF ;
    public final void parse() throws RecognitionException {
        try {
            // src/grammar/TL.g:11:3: ( block EOF )
            // src/grammar/TL.g:11:6: block EOF
            {
            pushFollow(FOLLOW_block_in_parse28);
            block();

            state._fsp--;


            match(input,EOF,FOLLOW_EOF_in_parse30); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "parse"



    // $ANTLR start "block"
    // src/grammar/TL.g:13:1: block : ( statement | functionDecl )* ( Return expression ';' )? ;
    public final void block() throws RecognitionException {
        try {
            // src/grammar/TL.g:14:3: ( ( statement | functionDecl )* ( Return expression ';' )? )
            // src/grammar/TL.g:14:5: ( statement | functionDecl )* ( Return expression ';' )?
            {
            // src/grammar/TL.g:14:5: ( statement | functionDecl )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==Assert||LA1_0==For||(LA1_0 >= Identifier && LA1_0 <= If)||(LA1_0 >= Print && LA1_0 <= Println)||LA1_0==Size||LA1_0==While) ) {
                    alt1=1;
                }
                else if ( (LA1_0==Def) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // src/grammar/TL.g:14:6: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_block43);
            	    statement();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // src/grammar/TL.g:14:18: functionDecl
            	    {
            	    pushFollow(FOLLOW_functionDecl_in_block47);
            	    functionDecl();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // src/grammar/TL.g:14:34: ( Return expression ';' )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==Return) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // src/grammar/TL.g:14:35: Return expression ';'
                    {
                    match(input,Return,FOLLOW_Return_in_block53); 

                    pushFollow(FOLLOW_expression_in_block55);
                    expression();

                    state._fsp--;


                    match(input,SColon,FOLLOW_SColon_in_block57); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "block"



    // $ANTLR start "statement"
    // src/grammar/TL.g:16:1: statement : ( assignment ';' | functionCall ';' | ifStatement | forStatement | whileStatement );
    public final void statement() throws RecognitionException {
        try {
            // src/grammar/TL.g:17:3: ( assignment ';' | functionCall ';' | ifStatement | forStatement | whileStatement )
            int alt3=5;
            switch ( input.LA(1) ) {
            case Identifier:
                {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==OParen) ) {
                    alt3=2;
                }
                else if ( (LA3_1==Assign||LA3_1==OBracket) ) {
                    alt3=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;

                }
                }
                break;
            case Assert:
            case Print:
            case Println:
            case Size:
                {
                alt3=2;
                }
                break;
            case If:
                {
                alt3=3;
                }
                break;
            case For:
                {
                alt3=4;
                }
                break;
            case While:
                {
                alt3=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }

            switch (alt3) {
                case 1 :
                    // src/grammar/TL.g:17:5: assignment ';'
                    {
                    pushFollow(FOLLOW_assignment_in_statement71);
                    assignment();

                    state._fsp--;


                    match(input,SColon,FOLLOW_SColon_in_statement73); 

                    }
                    break;
                case 2 :
                    // src/grammar/TL.g:18:5: functionCall ';'
                    {
                    pushFollow(FOLLOW_functionCall_in_statement79);
                    functionCall();

                    state._fsp--;


                    match(input,SColon,FOLLOW_SColon_in_statement81); 

                    }
                    break;
                case 3 :
                    // src/grammar/TL.g:19:5: ifStatement
                    {
                    pushFollow(FOLLOW_ifStatement_in_statement87);
                    ifStatement();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // src/grammar/TL.g:20:5: forStatement
                    {
                    pushFollow(FOLLOW_forStatement_in_statement93);
                    forStatement();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // src/grammar/TL.g:21:5: whileStatement
                    {
                    pushFollow(FOLLOW_whileStatement_in_statement99);
                    whileStatement();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "statement"



    // $ANTLR start "functionDecl"
    // src/grammar/TL.g:23:1: functionDecl : Def Identifier '(' ( idList )? ')' block End ;
    public final void functionDecl() throws RecognitionException {
        try {
            // src/grammar/TL.g:24:3: ( Def Identifier '(' ( idList )? ')' block End )
            // src/grammar/TL.g:24:5: Def Identifier '(' ( idList )? ')' block End
            {
            match(input,Def,FOLLOW_Def_in_functionDecl111); 

            match(input,Identifier,FOLLOW_Identifier_in_functionDecl113); 

            match(input,OParen,FOLLOW_OParen_in_functionDecl115); 

            // src/grammar/TL.g:24:24: ( idList )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==Identifier) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // src/grammar/TL.g:24:24: idList
                    {
                    pushFollow(FOLLOW_idList_in_functionDecl117);
                    idList();

                    state._fsp--;


                    }
                    break;

            }


            match(input,CParen,FOLLOW_CParen_in_functionDecl120); 

            pushFollow(FOLLOW_block_in_functionDecl122);
            block();

            state._fsp--;


            match(input,End,FOLLOW_End_in_functionDecl124); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "functionDecl"



    // $ANTLR start "idList"
    // src/grammar/TL.g:26:1: idList : Identifier ( ',' Identifier )* ;
    public final void idList() throws RecognitionException {
        try {
            // src/grammar/TL.g:27:3: ( Identifier ( ',' Identifier )* )
            // src/grammar/TL.g:27:5: Identifier ( ',' Identifier )*
            {
            match(input,Identifier,FOLLOW_Identifier_in_idList136); 

            // src/grammar/TL.g:27:16: ( ',' Identifier )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==Comma) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // src/grammar/TL.g:27:17: ',' Identifier
            	    {
            	    match(input,Comma,FOLLOW_Comma_in_idList139); 

            	    match(input,Identifier,FOLLOW_Identifier_in_idList141); 

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "idList"



    // $ANTLR start "assignment"
    // src/grammar/TL.g:29:1: assignment : Identifier ( indexes )? '=' expression ;
    public final void assignment() throws RecognitionException {
        try {
            // src/grammar/TL.g:30:3: ( Identifier ( indexes )? '=' expression )
            // src/grammar/TL.g:30:5: Identifier ( indexes )? '=' expression
            {
            match(input,Identifier,FOLLOW_Identifier_in_assignment155); 

            // src/grammar/TL.g:30:16: ( indexes )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==OBracket) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // src/grammar/TL.g:30:16: indexes
                    {
                    pushFollow(FOLLOW_indexes_in_assignment157);
                    indexes();

                    state._fsp--;


                    }
                    break;

            }


            match(input,Assign,FOLLOW_Assign_in_assignment160); 

            pushFollow(FOLLOW_expression_in_assignment162);
            expression();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "assignment"



    // $ANTLR start "indexes"
    // src/grammar/TL.g:32:1: indexes : ( '[' expression ']' )+ ;
    public final void indexes() throws RecognitionException {
        try {
            // src/grammar/TL.g:33:3: ( ( '[' expression ']' )+ )
            // src/grammar/TL.g:33:5: ( '[' expression ']' )+
            {
            // src/grammar/TL.g:33:5: ( '[' expression ']' )+
            int cnt7=0;
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==OBracket) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // src/grammar/TL.g:33:6: '[' expression ']'
            	    {
            	    match(input,OBracket,FOLLOW_OBracket_in_indexes175); 

            	    pushFollow(FOLLOW_expression_in_indexes177);
            	    expression();

            	    state._fsp--;


            	    match(input,CBracket,FOLLOW_CBracket_in_indexes179); 

            	    }
            	    break;

            	default :
            	    if ( cnt7 >= 1 ) break loop7;
                        EarlyExitException eee =
                            new EarlyExitException(7, input);
                        throw eee;
                }
                cnt7++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "indexes"



    // $ANTLR start "expression"
    // src/grammar/TL.g:35:1: expression : condExpr ;
    public final void expression() throws RecognitionException {
        try {
            // src/grammar/TL.g:36:3: ( condExpr )
            // src/grammar/TL.g:36:5: condExpr
            {
            pushFollow(FOLLOW_condExpr_in_expression193);
            condExpr();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "expression"



    // $ANTLR start "condExpr"
    // src/grammar/TL.g:38:1: condExpr : orExpr ( '?' expression ':' expression | In expression )? ;
    public final void condExpr() throws RecognitionException {
        try {
            // src/grammar/TL.g:39:3: ( orExpr ( '?' expression ':' expression | In expression )? )
            // src/grammar/TL.g:39:6: orExpr ( '?' expression ':' expression | In expression )?
            {
            pushFollow(FOLLOW_orExpr_in_condExpr206);
            orExpr();

            state._fsp--;


            // src/grammar/TL.g:39:13: ( '?' expression ':' expression | In expression )?
            int alt8=3;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==QMark) ) {
                alt8=1;
            }
            else if ( (LA8_0==In) ) {
                alt8=2;
            }
            switch (alt8) {
                case 1 :
                    // src/grammar/TL.g:39:15: '?' expression ':' expression
                    {
                    match(input,QMark,FOLLOW_QMark_in_condExpr210); 

                    pushFollow(FOLLOW_expression_in_condExpr212);
                    expression();

                    state._fsp--;


                    match(input,Colon,FOLLOW_Colon_in_condExpr214); 

                    pushFollow(FOLLOW_expression_in_condExpr216);
                    expression();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // src/grammar/TL.g:40:15: In expression
                    {
                    match(input,In,FOLLOW_In_in_condExpr232); 

                    pushFollow(FOLLOW_expression_in_condExpr234);
                    expression();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "condExpr"



    // $ANTLR start "orExpr"
    // src/grammar/TL.g:43:1: orExpr : andExpr ( '||' andExpr )* ;
    public final void orExpr() throws RecognitionException {
        try {
            // src/grammar/TL.g:44:3: ( andExpr ( '||' andExpr )* )
            // src/grammar/TL.g:44:5: andExpr ( '||' andExpr )*
            {
            pushFollow(FOLLOW_andExpr_in_orExpr262);
            andExpr();

            state._fsp--;


            // src/grammar/TL.g:44:13: ( '||' andExpr )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==Or) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // src/grammar/TL.g:44:14: '||' andExpr
            	    {
            	    match(input,Or,FOLLOW_Or_in_orExpr265); 

            	    pushFollow(FOLLOW_andExpr_in_orExpr267);
            	    andExpr();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "orExpr"



    // $ANTLR start "andExpr"
    // src/grammar/TL.g:46:1: andExpr : equExpr ( '&&' equExpr )* ;
    public final void andExpr() throws RecognitionException {
        try {
            // src/grammar/TL.g:47:3: ( equExpr ( '&&' equExpr )* )
            // src/grammar/TL.g:47:5: equExpr ( '&&' equExpr )*
            {
            pushFollow(FOLLOW_equExpr_in_andExpr281);
            equExpr();

            state._fsp--;


            // src/grammar/TL.g:47:13: ( '&&' equExpr )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==And) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // src/grammar/TL.g:47:14: '&&' equExpr
            	    {
            	    match(input,And,FOLLOW_And_in_andExpr284); 

            	    pushFollow(FOLLOW_equExpr_in_andExpr286);
            	    equExpr();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "andExpr"



    // $ANTLR start "equExpr"
    // src/grammar/TL.g:49:1: equExpr : relExpr ( ( '==' | '!=' ) relExpr )* ;
    public final void equExpr() throws RecognitionException {
        try {
            // src/grammar/TL.g:50:3: ( relExpr ( ( '==' | '!=' ) relExpr )* )
            // src/grammar/TL.g:50:5: relExpr ( ( '==' | '!=' ) relExpr )*
            {
            pushFollow(FOLLOW_relExpr_in_equExpr300);
            relExpr();

            state._fsp--;


            // src/grammar/TL.g:50:13: ( ( '==' | '!=' ) relExpr )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==Equals||LA11_0==NEquals) ) {
                    alt11=1;
                }


                switch (alt11) {
            	case 1 :
            	    // src/grammar/TL.g:50:14: ( '==' | '!=' ) relExpr
            	    {
            	    if ( input.LA(1)==Equals||input.LA(1)==NEquals ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    pushFollow(FOLLOW_relExpr_in_equExpr311);
            	    relExpr();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "equExpr"



    // $ANTLR start "relExpr"
    // src/grammar/TL.g:52:1: relExpr : addExpr ( ( '>=' | '<=' | '>' | '<' ) addExpr )* ;
    public final void relExpr() throws RecognitionException {
        try {
            // src/grammar/TL.g:53:3: ( addExpr ( ( '>=' | '<=' | '>' | '<' ) addExpr )* )
            // src/grammar/TL.g:53:5: addExpr ( ( '>=' | '<=' | '>' | '<' ) addExpr )*
            {
            pushFollow(FOLLOW_addExpr_in_relExpr325);
            addExpr();

            state._fsp--;


            // src/grammar/TL.g:53:13: ( ( '>=' | '<=' | '>' | '<' ) addExpr )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( ((LA12_0 >= GT && LA12_0 <= GTEquals)||(LA12_0 >= LT && LA12_0 <= LTEquals)) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // src/grammar/TL.g:53:14: ( '>=' | '<=' | '>' | '<' ) addExpr
            	    {
            	    if ( (input.LA(1) >= GT && input.LA(1) <= GTEquals)||(input.LA(1) >= LT && input.LA(1) <= LTEquals) ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    pushFollow(FOLLOW_addExpr_in_relExpr344);
            	    addExpr();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "relExpr"



    // $ANTLR start "addExpr"
    // src/grammar/TL.g:55:1: addExpr : mulExpr ( ( '+' | '-' ) mulExpr )* ;
    public final void addExpr() throws RecognitionException {
        try {
            // src/grammar/TL.g:56:3: ( mulExpr ( ( '+' | '-' ) mulExpr )* )
            // src/grammar/TL.g:56:5: mulExpr ( ( '+' | '-' ) mulExpr )*
            {
            pushFollow(FOLLOW_mulExpr_in_addExpr358);
            mulExpr();

            state._fsp--;


            // src/grammar/TL.g:56:13: ( ( '+' | '-' ) mulExpr )*
            loop13:
            do {
                int alt13=2;
                int LA13_0 = input.LA(1);

                if ( (LA13_0==Add||LA13_0==Subtract) ) {
                    alt13=1;
                }


                switch (alt13) {
            	case 1 :
            	    // src/grammar/TL.g:56:14: ( '+' | '-' ) mulExpr
            	    {
            	    if ( input.LA(1)==Add||input.LA(1)==Subtract ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    pushFollow(FOLLOW_mulExpr_in_addExpr369);
            	    mulExpr();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop13;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "addExpr"



    // $ANTLR start "mulExpr"
    // src/grammar/TL.g:58:1: mulExpr : powExpr ( ( '*' | '/' | '%' ) powExpr )* ;
    public final void mulExpr() throws RecognitionException {
        try {
            // src/grammar/TL.g:59:3: ( powExpr ( ( '*' | '/' | '%' ) powExpr )* )
            // src/grammar/TL.g:59:5: powExpr ( ( '*' | '/' | '%' ) powExpr )*
            {
            pushFollow(FOLLOW_powExpr_in_mulExpr383);
            powExpr();

            state._fsp--;


            // src/grammar/TL.g:59:13: ( ( '*' | '/' | '%' ) powExpr )*
            loop14:
            do {
                int alt14=2;
                int LA14_0 = input.LA(1);

                if ( (LA14_0==Divide||(LA14_0 >= Modulus && LA14_0 <= Multiply)) ) {
                    alt14=1;
                }


                switch (alt14) {
            	case 1 :
            	    // src/grammar/TL.g:59:14: ( '*' | '/' | '%' ) powExpr
            	    {
            	    if ( input.LA(1)==Divide||(input.LA(1) >= Modulus && input.LA(1) <= Multiply) ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    pushFollow(FOLLOW_powExpr_in_mulExpr398);
            	    powExpr();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop14;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "mulExpr"



    // $ANTLR start "powExpr"
    // src/grammar/TL.g:61:1: powExpr : unaryExpr ( '^' unaryExpr )* ;
    public final void powExpr() throws RecognitionException {
        try {
            // src/grammar/TL.g:62:3: ( unaryExpr ( '^' unaryExpr )* )
            // src/grammar/TL.g:62:5: unaryExpr ( '^' unaryExpr )*
            {
            pushFollow(FOLLOW_unaryExpr_in_powExpr412);
            unaryExpr();

            state._fsp--;


            // src/grammar/TL.g:62:15: ( '^' unaryExpr )*
            loop15:
            do {
                int alt15=2;
                int LA15_0 = input.LA(1);

                if ( (LA15_0==Pow) ) {
                    alt15=1;
                }


                switch (alt15) {
            	case 1 :
            	    // src/grammar/TL.g:62:17: '^' unaryExpr
            	    {
            	    match(input,Pow,FOLLOW_Pow_in_powExpr416); 

            	    pushFollow(FOLLOW_unaryExpr_in_powExpr418);
            	    unaryExpr();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop15;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "powExpr"



    // $ANTLR start "unaryExpr"
    // src/grammar/TL.g:64:1: unaryExpr : ( '-' atom | '!' atom | atom );
    public final void unaryExpr() throws RecognitionException {
        try {
            // src/grammar/TL.g:65:3: ( '-' atom | '!' atom | atom )
            int alt16=3;
            switch ( input.LA(1) ) {
            case Subtract:
                {
                alt16=1;
                }
                break;
            case Excl:
                {
                alt16=2;
                }
                break;
            case Assert:
            case Bool:
            case Identifier:
            case Null:
            case Number:
            case OBracket:
            case OParen:
            case Print:
            case Println:
            case Size:
            case String:
                {
                alt16=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 16, 0, input);

                throw nvae;

            }

            switch (alt16) {
                case 1 :
                    // src/grammar/TL.g:65:5: '-' atom
                    {
                    match(input,Subtract,FOLLOW_Subtract_in_unaryExpr432); 

                    pushFollow(FOLLOW_atom_in_unaryExpr434);
                    atom();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // src/grammar/TL.g:66:5: '!' atom
                    {
                    match(input,Excl,FOLLOW_Excl_in_unaryExpr440); 

                    pushFollow(FOLLOW_atom_in_unaryExpr442);
                    atom();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // src/grammar/TL.g:67:9: atom
                    {
                    pushFollow(FOLLOW_atom_in_unaryExpr452);
                    atom();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "unaryExpr"



    // $ANTLR start "atom"
    // src/grammar/TL.g:69:1: atom : ( Null | Number | Bool | lookup );
    public final void atom() throws RecognitionException {
        try {
            // src/grammar/TL.g:70:3: ( Null | Number | Bool | lookup )
            int alt17=4;
            switch ( input.LA(1) ) {
            case Null:
                {
                alt17=1;
                }
                break;
            case Number:
                {
                alt17=2;
                }
                break;
            case Bool:
                {
                alt17=3;
                }
                break;
            case Assert:
            case Identifier:
            case OBracket:
            case OParen:
            case Print:
            case Println:
            case Size:
            case String:
                {
                alt17=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 17, 0, input);

                throw nvae;

            }
